Updated performance examples with more realistic tests

--- a/python/performance/performance-legendre-series.ipynb
+++ b/python/performance/performance-legendre-series.ipynb
@@ -22,21 +22,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scion : -28.558801040366696\n",
-      "numpy : -28.558801040366657\n",
+      "scion : -3.5\n",
+      "numpy : -3.5\n",
       "-------------------------\n",
-      "scion elapsed time = 0.0325 s\n",
-      "numpy elapsed time = 4.85 s\n",
+      "scion elapsed time = 3.8 s\n",
+      "numpy elapsed time = 33.5 s\n",
       "-------------------------\n",
-      "numpy / scion = 149.26806688612777\n",
+      "numpy / scion = 8.814938128624515\n",
       "-------------------------\n"
      ]
     }
    ],
    "source": [
-    "repeat = 1000\n",
+    "repeat = 10000000\n",
     "\n",
-    "coeffients = range(5000)\n",
+    "coeffients = [ -2., 1., 3. ]\n",
     "\n",
     "scion_test = scion.math.LegendreSeries( coeffients )\n",
     "numpy_test = numpy.polynomial.legendre.Legendre( coeffients )\n",
