--- a/python/performance/performance-polynomial-series.ipynb
+++ b/python/performance/performance-polynomial-series.ipynb
@@ -22,21 +22,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scion : 0.0\n",
-      "numpy : 0.0\n",
+      "scion : -2.0\n",
+      "numpy : -2.0\n",
       "-------------------------\n",
-      "scion elapsed time = 0.0247 s\n",
-      "numpy elapsed time = 0.934 s\n",
+      "scion elapsed time = 3.69 s\n",
+      "numpy elapsed time = 25.6 s\n",
       "-------------------------\n",
-      "numpy / scion = 37.849392880651884\n",
+      "numpy / scion = 6.9415787678838985\n",
       "-------------------------\n"
      ]
     }
    ],
    "source": [
-    "repeat = 1000\n",
+    "repeat = 10000000\n",
     "\n",
-    "coeffients = range(5000)\n",
+    "coeffients = [ -2., 1., 3. ]\n",
     "\n",
     "scion_test = scion.math.PolynomialSeries( coeffients )\n",
     "numpy_test = numpy.polynomial.Polynomial( coeffients )\n",
