--- a/python/performance/performance-legendre-series.ipynb
+++ b/python/performance/performance-legendre-series.ipynb
@@ -22,13 +22,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scion : -3.5\n",
-      "numpy : -3.5\n",
+      "scion : -8.0\n",
+      "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.8 s\n",
-      "numpy elapsed time = 33.5 s\n",
+      "scion elapsed time = 3.85 s\n",
+      "numpy elapsed time = 41.4 s\n",
       "-------------------------\n",
-      "numpy / scion = 8.814938128624515\n",
+      "numpy / scion = 10.745814695505988\n",
       "-------------------------\n"
      ]
     }
@@ -36,7 +36,7 @@
    "source": [
     "repeat = 10000000\n",
     "\n",
-    "coeffients = [ -2., 1., 3. ]\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
     "\n",
     "scion_test = scion.math.LegendreSeries( coeffients )\n",
     "numpy_test = numpy.polynomial.legendre.Legendre( coeffients )\n",
@@ -64,8 +64,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "274c8d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion : [(1.0000000000000115+0j), (4.000000000000031+0j), (1.99999999999996+0j)]\n",
+      "numpy : [1. 2. 4.]\n",
+      "-------------------------\n",
+      "scion elapsed time = 2.18 s\n",
+      "numpy elapsed time = 45.6 s\n",
+      "-------------------------\n",
+      "numpy / scion = 20.969233276264077\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
+    "\n",
+    "scion_test = scion.math.LegendreSeries( coeffients )\n",
+    "numpy_test = numpy.polynomial.legendre.Legendre( coeffients )\n",
+    "\n",
+    "print( 'scion :', scion_test.roots() )\n",
+    "print( 'numpy :', numpy_test.roots() )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test.roots()\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    " \n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = numpy_test.roots()\n",
+    "end = time.perf_counter()\n",
+    "time_numpy = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( 'numpy elapsed time = {:.3} s'.format( time_numpy ) )\n",
+    "print( '-------------------------' )\n",
+    "print( 'numpy / scion = {}'.format( time_numpy / time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ea37a8ca",
+   "id": "7ff57718",
    "metadata": {},
    "outputs": [],
    "source": []
