--- a/python/performance/performance-legendre-series.ipynb
+++ b/python/performance/performance-legendre-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.74 s\n",
-      "numpy elapsed time = 41.1 s\n",
+      "scion elapsed time = 3.79 s\n",
+      "numpy elapsed time = 42.7 s\n",
       "-------------------------\n",
-      "numpy / scion = 11.00558121516974\n",
+      "numpy / scion = 11.27202968341989\n",
       "-------------------------\n"
      ]
     }
@@ -72,13 +72,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scion : [(1.0000000000000002+0j), (4.000000000000002+0j), (1.9999999999999973+0j)]\n",
+      "scion : [1.0000000000000002, 1.9999999999999973, 4.000000000000002]\n",
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
       "scion elapsed time = 2.29 s\n",
-      "numpy elapsed time = 45.2 s\n",
+      "numpy elapsed time = 45.4 s\n",
       "-------------------------\n",
-      "numpy / scion = 19.74510557807914\n",
+      "numpy / scion = 19.838863299680618\n",
       "-------------------------\n"
      ]
     }
