Updating performance tests to include derivative and primitive

--- a/python/performance/performance-polynomial-series.ipynb
+++ b/python/performance/performance-polynomial-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.66 s\n",
-      "numpy elapsed time = 27.6 s\n",
+      "scion elapsed time = 3.68 s\n",
+      "numpy elapsed time = 28.7 s\n",
       "-------------------------\n",
-      "numpy / scion = 7.540551269834103\n",
+      "numpy / scion = 7.7895825068088085\n",
       "-------------------------\n"
      ]
     }
@@ -75,10 +75,10 @@
       "scion : [1.0000000000000002, 2.000000000000001, 3.9999999999999996]\n",
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
-      "scion elapsed time = 2.26 s\n",
-      "numpy elapsed time = 35.6 s\n",
+      "scion elapsed time = 2.35 s\n",
+      "numpy elapsed time = 35.8 s\n",
       "-------------------------\n",
-      "numpy / scion = 15.75733764458685\n",
+      "numpy / scion = 15.199217338943706\n",
       "-------------------------\n"
      ]
     }
@@ -115,6 +115,106 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "826f40e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion : [14.0, -14.0, 3.0]\n",
+      "numpy : 14.0 - 14.0·x¹ + 3.0·x²\n",
+      "-------------------------\n",
+      "scion elapsed time = 0.726 s\n",
+      "numpy elapsed time = 24.7 s\n",
+      "-------------------------\n",
+      "numpy / scion = 34.044871216118096\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "scion_test = scion.math.PolynomialSeries( coeffients )\n",
+    "numpy_test = numpy.polynomial.Polynomial( coeffients )\n",
+    "\n",
+    "print( 'scion :', scion_test.derivative().coefficients )\n",
+    "print( 'numpy :', numpy_test.deriv() )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test.derivative()\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    " \n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = numpy_test.deriv()\n",
+    "end = time.perf_counter()\n",
+    "time_numpy = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( 'numpy elapsed time = {:.3} s'.format( time_numpy ) )\n",
+    "print( '-------------------------' )\n",
+    "print( 'numpy / scion = {}'.format( time_numpy / time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "51bc9324",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion : [0.0, -8.0, 7.0, -2.3333333333333335, 0.25]\n",
+      "numpy : 0.0 - 8.0·x¹ + 7.0·x² - 2.3333333333333335·x³ + 0.25·x⁴\n",
+      "-------------------------\n",
+      "scion elapsed time = 0.764 s\n",
+      "numpy elapsed time = 31.4 s\n",
+      "-------------------------\n",
+      "numpy / scion = 41.04974112410926\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "scion_test = scion.math.PolynomialSeries( coeffients )\n",
+    "numpy_test = numpy.polynomial.Polynomial( coeffients )\n",
+    "\n",
+    "print( 'scion :', scion_test.primitive().coefficients )\n",
+    "print( 'numpy :', numpy_test.integ() )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test.primitive()\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    " \n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = numpy_test.integ()\n",
+    "end = time.perf_counter()\n",
+    "time_numpy = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( 'numpy elapsed time = {:.3} s'.format( time_numpy ) )\n",
+    "print( '-------------------------' )\n",
+    "print( 'numpy / scion = {}'.format( time_numpy / time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "5df75de7",
    "metadata": {},
    "outputs": [
