Update performance tests and add primitive test for Chebyshev

--- a/python/performance/performance-legendre-series.ipynb
+++ b/python/performance/performance-legendre-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.68 s\n",
-      "numpy elapsed time = 42.5 s\n",
+      "scion elapsed time = 3.71 s\n",
+      "numpy elapsed time = 43.5 s\n",
       "-------------------------\n",
-      "numpy / scion = 11.544219113842946\n",
+      "numpy / scion = 11.715686749132697\n",
       "-------------------------\n"
      ]
     }
@@ -76,9 +76,9 @@
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
       "scion elapsed time = 2.48 s\n",
-      "numpy elapsed time = 46.3 s\n",
+      "numpy elapsed time = 45.4 s\n",
       "-------------------------\n",
-      "numpy / scion = 18.688888114069545\n",
+      "numpy / scion = 18.29288134381081\n",
       "-------------------------\n"
      ]
     }
@@ -125,10 +125,10 @@
       "scion : [15.0, -14.0, 2.0]\n",
       "numpy : 15.0 - 14.0·P₁(x) + 2.0·P₂(x)\n",
       "-------------------------\n",
-      "scion elapsed time = 0.718 s\n",
-      "numpy elapsed time = 24.9 s\n",
+      "scion elapsed time = 0.737 s\n",
+      "numpy elapsed time = 25.4 s\n",
       "-------------------------\n",
-      "numpy / scion = 34.73856150672009\n",
+      "numpy / scion = 34.4708857428837\n",
       "-------------------------\n"
      ]
     }
@@ -176,10 +176,10 @@
       "numpy : -15.200000000000003 - 9.4·P₁(x) + 4.809523809523809·P₂(x) -\n",
       "0.9333333333333333·P₃(x) + 0.05714285714285715·P₄(x)\n",
       "-------------------------\n",
-      "scion elapsed time = 0.724 s\n",
-      "numpy elapsed time = 33.7 s\n",
+      "scion elapsed time = 1.06 s\n",
+      "numpy elapsed time = 32.2 s\n",
       "-------------------------\n",
-      "numpy / scion = 46.53636363643893\n",
+      "numpy / scion = 30.35224768286015\n",
       "-------------------------\n"
      ]
     }
@@ -192,16 +192,16 @@
     "scion_test = scion.math.LegendreSeries( coeffients )\n",
     "numpy_test = numpy.polynomial.legendre.Legendre( coeffients )\n",
     "\n",
-    "print( 'scion :', scion_test.primitive().coefficients )\n",
+    "print( 'scion :', scion_test.primitive( left = -1. ).coefficients )\n",
     "print( 'numpy :', numpy_test.integ( lbnd = -1 ) )\n",
     "\n",
     "start = time.perf_counter()\n",
-    "for i in range( repeat ) : result = scion_test.primitive()\n",
+    "for i in range( repeat ) : result = scion_test.primitive( left = -1. )\n",
     "end = time.perf_counter()\n",
     "time_scion = end - start\n",
     " \n",
     "start = time.perf_counter()\n",
-    "for i in range( repeat ) : result = numpy_test.integ()\n",
+    "for i in range( repeat ) : result = numpy_test.integ( lbnd = -1. )\n",
     "end = time.perf_counter()\n",
     "time_numpy = end - start\n",
     "\n",
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd5d194",
+   "id": "540d853c",
    "metadata": {},
    "outputs": [],
    "source": []
