--- a/python/performance/performance-chebyshev-series.ipynb
+++ b/python/performance/performance-chebyshev-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.87 s\n",
-      "numpy elapsed time = 36.4 s\n",
+      "scion elapsed time = 3.78 s\n",
+      "numpy elapsed time = 37.0 s\n",
       "-------------------------\n",
-      "numpy / scion = 9.405313978898894\n",
+      "numpy / scion = 9.808887477494197\n",
       "-------------------------\n"
      ]
     }
@@ -75,10 +75,10 @@
       "scion : [0.9999999999999909, 2.0000000000000426, 3.9999999999999494]\n",
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
-      "scion elapsed time = 2.19 s\n",
-      "numpy elapsed time = 42.0 s\n",
+      "scion elapsed time = 2.16 s\n",
+      "numpy elapsed time = 41.8 s\n",
       "-------------------------\n",
-      "numpy / scion = 19.190558323495583\n",
+      "numpy / scion = 19.3277944101801\n",
       "-------------------------\n"
      ]
     }
@@ -114,8 +114,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "44d0fd48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion : [-13.989583333333332, -9.75, 3.625, -0.5833333333333334, 0.03125]\n",
+      "numpy : -13.989583333333332 - 9.75·T₁(x) + 3.625·T₂(x) -\n",
+      "0.5833333333333334·T₃(x) + 0.03125·T₄(x)\n",
+      "-------------------------\n",
+      "scion elapsed time = 1.04 s\n",
+      "numpy elapsed time = 32.2 s\n",
+      "-------------------------\n",
+      "numpy / scion = 30.965553937628822\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -23./2., 59./4., -7./2., 1./4. ]\n",
+    "\n",
+    "scion_test = scion.math.ChebyshevSeries( coeffients )\n",
+    "numpy_test = numpy.polynomial.chebyshev.Chebyshev( coeffients )\n",
+    "\n",
+    "print( 'scion :', scion_test.primitive( left = -1. ).coefficients )\n",
+    "print( 'numpy :', numpy_test.integ( lbnd = -1 ) )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test.primitive( left = -1. )\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    " \n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = numpy_test.integ( lbnd = -1. )\n",
+    "end = time.perf_counter()\n",
+    "time_numpy = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( 'numpy elapsed time = {:.3} s'.format( time_numpy ) )\n",
+    "print( '-------------------------' )\n",
+    "print( 'numpy / scion = {}'.format( time_numpy / time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae0ad371",
    "metadata": {},
    "outputs": [],
    "source": []
