--- a/python/performance/performance-polynomial-series.ipynb
+++ b/python/performance/performance-polynomial-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.71 s\n",
-      "numpy elapsed time = 27.7 s\n",
+      "scion elapsed time = 3.78 s\n",
+      "numpy elapsed time = 27.3 s\n",
       "-------------------------\n",
-      "numpy / scion = 7.449977189067412\n",
+      "numpy / scion = 7.217651527828476\n",
       "-------------------------\n"
      ]
     }
@@ -75,10 +75,10 @@
       "scion : [1.0000000000000002, 2.000000000000001, 3.9999999999999996]\n",
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
-      "scion elapsed time = 2.35 s\n",
-      "numpy elapsed time = 36.0 s\n",
+      "scion elapsed time = 2.36 s\n",
+      "numpy elapsed time = 36.2 s\n",
       "-------------------------\n",
-      "numpy / scion = 15.283353032156285\n",
+      "numpy / scion = 15.352439018056662\n",
       "-------------------------\n"
      ]
     }
@@ -125,10 +125,10 @@
       "scion : [14.0, -14.0, 3.0]\n",
       "numpy : 14.0 - 14.0·x¹ + 3.0·x²\n",
       "-------------------------\n",
-      "scion elapsed time = 0.738 s\n",
-      "numpy elapsed time = 24.7 s\n",
+      "scion elapsed time = 0.736 s\n",
+      "numpy elapsed time = 24.8 s\n",
       "-------------------------\n",
-      "numpy / scion = 33.466153278722096\n",
+      "numpy / scion = 33.77109191654266\n",
       "-------------------------\n"
      ]
     }
@@ -172,13 +172,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scion : [0.0, -8.0, 7.0, -2.3333333333333335, 0.25]\n",
-      "numpy : 0.0 - 8.0·x¹ + 7.0·x² - 2.3333333333333335·x³ + 0.25·x⁴\n",
+      "scion : [-17.583333333333336, -8.0, 7.0, -2.3333333333333335, 0.25]\n",
+      "numpy : -17.583333333333336 - 8.0·x¹ + 7.0·x² - 2.3333333333333335·x³ + 0.25·x⁴\n",
       "-------------------------\n",
-      "scion elapsed time = 0.776 s\n",
-      "numpy elapsed time = 31.1 s\n",
+      "scion elapsed time = 1.07 s\n",
+      "numpy elapsed time = 30.1 s\n",
       "-------------------------\n",
-      "numpy / scion = 40.14575659137459\n",
+      "numpy / scion = 28.11052237624196\n",
       "-------------------------\n"
      ]
     }
@@ -191,16 +191,16 @@
     "scion_test = scion.math.PolynomialSeries( coeffients )\n",
     "numpy_test = numpy.polynomial.Polynomial( coeffients )\n",
     "\n",
-    "print( 'scion :', scion_test.primitive().coefficients )\n",
-    "print( 'numpy :', numpy_test.integ() )\n",
+    "print( 'scion :', scion_test.primitive( left = -1. ).coefficients )\n",
+    "print( 'numpy :', numpy_test.integ( lbnd = -1. ) )\n",
     "\n",
     "start = time.perf_counter()\n",
-    "for i in range( repeat ) : result = scion_test.primitive()\n",
+    "for i in range( repeat ) : result = scion_test.primitive( left = -1. )\n",
     "end = time.perf_counter()\n",
     "time_scion = end - start\n",
     " \n",
     "start = time.perf_counter()\n",
-    "for i in range( repeat ) : result = numpy_test.integ()\n",
+    "for i in range( repeat ) : result = numpy_test.integ( lbnd = -1. )\n",
     "end = time.perf_counter()\n",
     "time_numpy = end - start\n",
     "\n",
@@ -225,7 +225,7 @@
       "scion x : [-1.0, -0.9375, -0.875, -0.8125, -0.75, -0.6875, -0.625, -0.5625, -0.5, -0.4375, -0.375, -0.3125, -0.25, -0.1875, -0.125, -0.0625, 0.0, 0.0625, 0.125, 0.15625, 0.1875, 0.21875, 0.25, 0.28125, 0.3125, 0.34375, 0.375, 0.40625, 0.4375, 0.46875, 0.5, 0.53125, 0.5625, 0.59375, 0.625, 0.65625, 0.6875, 0.71875, 0.734375, 0.75, 0.765625, 0.78125, 0.796875, 0.8125, 0.828125, 0.84375, 0.859375, 0.875, 0.890625, 0.90625, 0.921875, 0.9296875, 0.9375, 0.9453125, 0.953125, 0.9609375, 0.96875, 0.9765625, 0.98046875, 0.984375, 0.98828125, 0.9921875, 0.99609375, 0.998046875, 0.9990234375, 1.0]\n",
       "scion y : [-30.0, -28.101318359375, -26.279296875, -24.532470703125, -22.859375, -21.258544921875, -19.728515625, -18.267822265625, -16.875, -15.548583984375, -14.287109375, -13.089111328125, -11.953125, -10.877685546875, -9.861328125, -8.902587890625, -8.0, -7.152099609375, -6.357421875, -5.979583740234375, -5.614501953125, -5.261993408203125, -4.921875, -4.593963623046875, -4.278076171875, -3.974029541015625, -3.681640625, -3.400726318359375, -3.131103515625, -2.872589111328125, -2.625, -2.388153076171875, -2.161865234375, -1.945953369140625, -1.740234375, -1.544525146484375, -1.358642578125, -1.182403564453125, -1.0978431701660156, -1.015625, -0.9357261657714844, -0.858123779296875, -0.7827949523925781, -0.709716796875, -0.6388664245605469, -0.570220947265625, -0.5037574768066406, -0.439453125, -0.3772850036621094, -0.317230224609375, -0.2592658996582031, -0.23106050491333008, -0.203369140625, -0.17618894577026367, -0.14951705932617188, -0.12335062026977539, -0.097686767578125, -0.07252264022827148, -0.060127079486846924, -0.047855377197265625, -0.035707175731658936, -0.023682117462158203, -0.011779844760894775, -0.005874641239643097, -0.0029335031285881996, 0.0]\n",
       "-------------------------\n",
-      "scion elapsed time = 4.02 s\n",
+      "scion elapsed time = 4.03 s\n",
       "-------------------------\n"
      ]
     }
