Enhancing ChebyshevSeries roots by newton

--- a/python/performance/performance-chebyshev-series.ipynb
+++ b/python/performance/performance-chebyshev-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.78 s\n",
-      "numpy elapsed time = 37.5 s\n",
+      "scion elapsed time = 4.0 s\n",
+      "numpy elapsed time = 36.9 s\n",
       "-------------------------\n",
-      "numpy / scion = 9.925276580868175\n",
+      "numpy / scion = 9.22221493901732\n",
       "-------------------------\n"
      ]
     }
@@ -72,13 +72,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scion : [0.9999999999999909, 2.0000000000000426, 3.9999999999999494]\n",
+      "scion : [1.0000000000000004, 2.0, 4.0]\n",
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
-      "scion elapsed time = 2.17 s\n",
-      "numpy elapsed time = 41.8 s\n",
+      "scion elapsed time = 2.41 s\n",
+      "numpy elapsed time = 42.0 s\n",
       "-------------------------\n",
-      "numpy / scion = 19.253030951657482\n",
+      "numpy / scion = 17.37680832092017\n",
       "-------------------------\n"
      ]
     }
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6cb1b781",
+   "id": "910f43ff",
    "metadata": {},
    "outputs": [
     {
@@ -125,10 +125,10 @@
       "scion : [15.5, -14.0, 1.5]\n",
       "numpy : 15.5 - 14.0·T₁(x) + 1.5·T₂(x)\n",
       "-------------------------\n",
-      "scion elapsed time = 0.744 s\n",
-      "numpy elapsed time = 26.0 s\n",
+      "scion elapsed time = 0.754 s\n",
+      "numpy elapsed time = 25.1 s\n",
       "-------------------------\n",
-      "numpy / scion = 34.96782397013042\n",
+      "numpy / scion = 33.26057509224748\n",
       "-------------------------\n"
      ]
     }
@@ -176,10 +176,10 @@
       "numpy : -13.989583333333332 - 9.75·T₁(x) + 3.625·T₂(x) -\n",
       "0.5833333333333334·T₃(x) + 0.03125·T₄(x)\n",
       "-------------------------\n",
-      "scion elapsed time = 1.07 s\n",
-      "numpy elapsed time = 32.1 s\n",
+      "scion elapsed time = 1.08 s\n",
+      "numpy elapsed time = 31.6 s\n",
       "-------------------------\n",
-      "numpy / scion = 29.897699532377235\n",
+      "numpy / scion = 29.195072556593377\n",
       "-------------------------\n"
      ]
     }
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b726f7d0",
+   "id": "c3f67690",
    "metadata": {},
    "outputs": [],
    "source": []
