Adding the primitive, derivative and roots function for Chebyshev approximated functions

--- a/python/performance/performance-chebyshev-approximation.ipynb
+++ b/python/performance/performance-chebyshev-approximation.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import scion\n",
-    "import time"
+    "import time\n",
+    "import math"
    ]
   },
   {
@@ -39,7 +40,7 @@
      "text": [
       "scion : [7.065055611250996e-17, 0.9999999999999999, 2.220446049250313e-16, 1.0092936587501424e-16, 1.0092936587501424e-16, 2.0185873175002848e-16, -2.8260222445003984e-16, 1.6148698540002277e-16, 1.4130111222501992e-16, -1.5139404881252136e-16, -3.6839218544380196e-16]\n",
       "-------------------------\n",
-      "scion elapsed time = 4.31 s\n",
+      "scion elapsed time = 4.21 s\n",
       "-------------------------\n"
      ]
     }
@@ -73,7 +74,7 @@
      "text": [
       "scion : [1.0000000000000004, 3.0, 2.8260222445003984e-16, 3.6334571715005125e-16, 3.6334571715005125e-16, 2.8260222445003984e-16, -9.285501660501309e-16, 0.0, 6.055761952500853e-17, -7.468773074751053e-16, -1.4029181856626978e-15]\n",
       "-------------------------\n",
-      "scion elapsed time = 4.33 s\n",
+      "scion elapsed time = 4.2 s\n",
       "-------------------------\n"
      ]
     }
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "189fb934",
+   "id": "eb9b218f",
    "metadata": {},
    "outputs": [],
    "source": []
