--- a/python/examples/h1-capture-linearisation.ipynb
+++ b/python/examples/h1-capture-linearisation.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this example requires that ENDFtk and ACEtk be installed as well\n",
     "import ENDFtk\n",
     "import ACEtk\n",
     "import scion\n",
