Updating performance test (slight decrease in performance due to call operator overloading on the python side)

--- a/python/performance/performance-Gauss-Legendre-quadrature.ipynb
+++ b/python/performance/performance-Gauss-Legendre-quadrature.ipynb
@@ -24,6 +24,11 @@
     "def gauss( f ):\n",
     "    \n",
     "    result = numpy.sum( wi * f(xi) )\n",
+    "    return result\n",
+    "\n",
+    "def gauss_ab( f, a, b ):\n",
+    "    \n",
+    "    result = 0.5 * ( b - a ) * numpy.sum( wi * f( ( xi + 1 ) * ( b - a ) / 2 + a ) )\n",
     "    return result"
    ]
   },
@@ -54,10 +59,10 @@
       "scion gauss-legendre 7 : 2.0000000000000013\n",
       "numpy : 2.0\n",
       "-------------------------\n",
-      "scion trapezoid elapsed time = 0.462 s\n",
-      "scion gauss-legendre 2 elapsed time = 0.781 s\n",
-      "scion gauss-legendre 7 elapsed time = 1.24 s\n",
-      "numpy elapsed time = 4.37 s\n",
+      "scion trapezoid elapsed time = 0.447 s\n",
+      "scion gauss-legendre 2 elapsed time = 0.856 s\n",
+      "scion gauss-legendre 7 elapsed time = 1.31 s\n",
+      "numpy elapsed time = 4.35 s\n",
       "-------------------------\n"
      ]
     }
@@ -104,11 +109,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "72ef0504",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion trapezoid : 10.0\n",
+      "scion gauss-legendre 2 : 10.0\n",
+      "scion gauss-legendre 7 : 10.000000000000004\n",
+      "numpy : 10.0\n",
+      "-------------------------\n",
+      "scion trapezoid elapsed time = 0.428 s\n",
+      "scion gauss-legendre 2 elapsed time = 0.877 s\n",
+      "scion gauss-legendre 7 elapsed time = 1.34 s\n",
+      "numpy elapsed time = 8.04 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "scion_trapezoid_test = scion.integration.linlin\n",
+    "scion_gauslegendre2_test = scion.integration.GaussLegendre2()\n",
+    "scion_gauslegendre7_test = scion.integration.GaussLegendre7()\n",
+    "\n",
+    "print( 'scion trapezoid :', scion_trapezoid_test( -1, +1, function1( 3. ), function1( 5. ) ) )\n",
+    "print( 'scion gauss-legendre 2 :', scion_gauslegendre2_test( function1, 3., 5. ) )\n",
+    "print( 'scion gauss-legendre 7 :', scion_gauslegendre7_test( function1, 3., 5. ) )\n",
+    "print( 'numpy :', gauss_ab( function1, 3., 5. ) )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_trapezoid_test( -1, +1, function1( 3. ), function1( 5. ) )\n",
+    "end = time.perf_counter()\n",
+    "time_trapezoid = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_gauslegendre2_test( function1, 3., 5. )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_2 = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_gauslegendre7_test( function1, 3., 5. )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_7 = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = gauss_ab( function1, 3., 5. )\n",
+    "end = time.perf_counter()\n",
+    "time_numpy = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion trapezoid elapsed time = {:.3} s'.format( time_trapezoid ) )\n",
+    "print( 'scion gauss-legendre 2 elapsed time = {:.3} s'.format( time_scion_2 ) )\n",
+    "print( 'scion gauss-legendre 7 elapsed time = {:.3} s'.format( time_scion_7 ) )\n",
+    "print( 'numpy elapsed time = {:.3} s'.format( time_numpy ) )\n",
+    "print( '-------------------------' )"
+   ]
   }
  ],
  "metadata": {
