Updating performance tests (slight decrease due to newton but root estimates are better)

--- a/python/performance/performance-Gauss-Legendre-quadrature.ipynb
+++ b/python/performance/performance-Gauss-Legendre-quadrature.ipynb
@@ -56,13 +56,13 @@
      "text": [
       "scion trapezoid : 2.0\n",
       "scion gauss-legendre 2 : 2.0\n",
-      "scion gauss-legendre 7 : 2.0000000000000013\n",
+      "scion gauss-legendre 7 : 2.0\n",
       "numpy : 2.0\n",
       "-------------------------\n",
-      "scion trapezoid elapsed time = 0.447 s\n",
-      "scion gauss-legendre 2 elapsed time = 0.856 s\n",
-      "scion gauss-legendre 7 elapsed time = 1.31 s\n",
-      "numpy elapsed time = 4.35 s\n",
+      "scion trapezoid elapsed time = 0.456 s\n",
+      "scion gauss-legendre 2 elapsed time = 0.851 s\n",
+      "scion gauss-legendre 7 elapsed time = 1.29 s\n",
+      "numpy elapsed time = 4.33 s\n",
       "-------------------------\n"
      ]
     }
@@ -119,13 +119,13 @@
      "text": [
       "scion trapezoid : 10.0\n",
       "scion gauss-legendre 2 : 10.0\n",
-      "scion gauss-legendre 7 : 10.000000000000004\n",
+      "scion gauss-legendre 7 : 10.0\n",
       "numpy : 10.0\n",
       "-------------------------\n",
-      "scion trapezoid elapsed time = 0.428 s\n",
-      "scion gauss-legendre 2 elapsed time = 0.877 s\n",
-      "scion gauss-legendre 7 elapsed time = 1.34 s\n",
-      "numpy elapsed time = 8.04 s\n",
+      "scion trapezoid elapsed time = 0.429 s\n",
+      "scion gauss-legendre 2 elapsed time = 0.867 s\n",
+      "scion gauss-legendre 7 elapsed time = 1.32 s\n",
+      "numpy elapsed time = 8.12 s\n",
       "-------------------------\n"
      ]
     }
