Updated code for node and weight calculation

--- a/src/scion/integration/resources/quadrature-abscissa-weights.ipynb
+++ b/src/scion/integration/resources/quadrature-abscissa-weights.ipynb
@@ -69,7 +69,6 @@
     "coefficients[-1] = 1.\n",
     "f = scion.math.LegendreSeries( coefficients )\n",
     "df = f.derivative()\n",
-    "d2f = df.derivative()\n",
     "\n",
     "# calculate roots\n",
     "x = df.roots()\n",
@@ -96,8 +95,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d816c64c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-7.07106781186547e-01, 1.57079632679490e+00\n",
+      " 7.07106781186548e-01, 1.57079632679490e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gauss-chebyshev\n",
+    "# abscissa are cos((2i-1)pi/2n)\n",
+    "# weights are pi/n\n",
+    "\n",
+    "n = 2\n",
+    "\n",
+    "pi = math.acos(-1)\n",
+    "\n",
+    "x = [ math.cos( (2*i-1)/(2*n)*pi ) for i in range(1, n+1) ]\n",
+    "w = pi/n\n",
+    "x.reverse()\n",
+    "\n",
+    "for index in range( 0, n ) :\n",
+    "    \n",
+    "    print( \"{: .14e}, {:.14e}\".format( x[index], w ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa9f83f1",
    "metadata": {},
    "outputs": [],
    "source": []
